pm: implement Q3 and CPMA step up behaviours, improve default
Allows stepping up over tiny ramps that are likely brush misalignments
(when the player first collides with them) in all configs as it's needed
to support several Q3/QL maps (not just defrag ones). This would also be
more forgiving to mappers using blender to create some geometry.
A simple hack is used to make this frametime-independent.

Optimises some cases (not trying to step up when hitting the ceiling,
or when float precision issues occur).

--- a/physics.cfg
+++ b/physics.cfg
@@ -37,6 +37,7 @@ set g_physics_xonotic_warsowbunny_backtosideratio 0.8
 set g_physics_xonotic_friction 6
 set g_physics_xonotic_friction_slick 0.5
 set g_physics_xonotic_stepheight 31
+set g_physics_xonotic_steptype 0
 set g_physics_xonotic_accelerate 15
 set g_physics_xonotic_stopspeed 100
 set g_physics_xonotic_airaccelerate 2
@@ -77,6 +78,7 @@ set g_physics_nexuiz_warsowbunny_backtosideratio 0.8
 set g_physics_nexuiz_friction 7
 set g_physics_nexuiz_friction_slick 7
 set g_physics_nexuiz_stepheight 34
+set g_physics_nexuiz_steptype 0
 set g_physics_nexuiz_accelerate 8
 set g_physics_nexuiz_stopspeed 100
 set g_physics_nexuiz_airaccelerate 5.5
@@ -117,6 +119,7 @@ set g_physics_quake_warsowbunny_backtosideratio 0.8
 set g_physics_quake_friction 4
 set g_physics_quake_friction_slick 4
 set g_physics_quake_stepheight 18
+set g_physics_quake_steptype 0
 set g_physics_quake_accelerate 10
 set g_physics_quake_stopspeed 100
 set g_physics_quake_airaccelerate 106.66666666666666666666
@@ -157,6 +160,7 @@ set g_physics_warsow_warsowbunny_backtosideratio 0.8
 set g_physics_warsow_friction 8
 set g_physics_warsow_friction_slick 0
 set g_physics_warsow_stepheight 18
+set g_physics_warsow_steptype 0
 set g_physics_warsow_accelerate 15
 set g_physics_warsow_stopspeed 100
 set g_physics_warsow_airaccelerate 1
@@ -197,6 +201,7 @@ set g_physics_xdf_warsowbunny_backtosideratio 0.8
 set g_physics_xdf_friction 5.8
 set g_physics_xdf_friction_slick 0
 set g_physics_xdf_stepheight 26
+set g_physics_xdf_steptype 0
 set g_physics_xdf_accelerate 15
 set g_physics_xdf_stopspeed 100
 set g_physics_xdf_airaccelerate 1
@@ -237,6 +242,7 @@ set g_physics_quake3_warsowbunny_backtosideratio 0.8
 set g_physics_quake3_friction 6
 set g_physics_quake3_friction_slick 0
 set g_physics_quake3_stepheight 18
+set g_physics_quake3_steptype 3
 set g_physics_quake3_accelerate 10
 set g_physics_quake3_stopspeed 100
 set g_physics_quake3_airaccelerate 1
@@ -277,6 +283,7 @@ set g_physics_cpma_warsowbunny_backtosideratio 0.8
 set g_physics_cpma_friction 6
 set g_physics_cpma_friction_slick 0
 set g_physics_cpma_stepheight 18
+set g_physics_cpma_steptype 2
 set g_physics_cpma_accelerate 15
 set g_physics_cpma_stopspeed 100
 set g_physics_cpma_airaccelerate 1
@@ -317,6 +324,7 @@ set g_physics_vecxis_warsowbunny_backtosideratio 0.8
 set g_physics_vecxis_friction 5
 set g_physics_vecxis_friction_slick 5
 set g_physics_vecxis_stepheight 34
+set g_physics_vecxis_steptype 0
 set g_physics_vecxis_accelerate 5.5
 set g_physics_vecxis_stopspeed 100
 set g_physics_vecxis_airaccelerate 5.5
@@ -357,6 +365,7 @@ set g_physics_quake2_warsowbunny_backtosideratio 0.8
 set g_physics_quake2_friction 6
 set g_physics_quake2_friction_slick 0
 set g_physics_quake2_stepheight 18
+set g_physics_quake2_steptype 0
 set g_physics_quake2_accelerate 10
 set g_physics_quake2_stopspeed 100
 set g_physics_quake2_airaccelerate 1
@@ -397,6 +406,7 @@ set g_physics_bones_warsowbunny_backtosideratio 0.8
 set g_physics_bones_friction 6
 set g_physics_bones_friction_slick 0
 set g_physics_bones_stepheight 25 // 42.25+31 - 48.6 = 24.65 (xon jump height + stepheight - cpma jump height)
+set g_physics_bones_steptype 0
 set g_physics_bones_accelerate 15
 set g_physics_bones_stopspeed 100
 set g_physics_bones_airaccelerate 1
@@ -437,6 +447,7 @@ set g_physics_overkill_warsowbunny_backtosideratio 0.8
 set g_physics_overkill_friction 8
 set g_physics_overkill_friction_slick 0.5
 set g_physics_overkill_stepheight 31
+set g_physics_overkill_steptype 0
 set g_physics_overkill_accelerate 15
 set g_physics_overkill_stopspeed 100
 set g_physics_overkill_airaccelerate 2
