--- a/physicsCPMA.cfg
+++ b/physicsCPMA.cfg
@@ -35,6 +35,7 @@ sv_slickaccelerate 15
 sv_friction 6
 edgefriction 1
 sv_stepheight 18
+sv_steptype 2
 sv_jumpvelocity 270
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate 4
