--- a/physicsFruit.cfg
+++ b/physicsFruit.cfg
@@ -11,6 +11,7 @@ sv_slickaccelerate 15
 sv_friction 8
 edgefriction 1
 sv_stepheight 34
+sv_steptype 0
 sv_jumpvelocity 270
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate -1
