--- a/physicsLeeStricklin-ModdedFruit.cfg
+++ b/physicsLeeStricklin-ModdedFruit.cfg
@@ -15,6 +15,7 @@ sv_stepheight 26
 // Q1: 16+2
 // Nex: 32+2
 // we try: 24+2
+sv_steptype 0
 
 // actually, what we want is 266.6666 for 180bpm
 // but 260 takes same amount of frames and is nicer to mappers
