--- a/physicsLeeStricklinOld.cfg
+++ b/physicsLeeStricklinOld.cfg
@@ -13,6 +13,7 @@ sv_slickaccelerate 13
 sv_friction 9.6 // higher values make you slide less
 edgefriction 1 // div0 says no! lol
 sv_stepheight 26
+sv_steptype 0
 sv_jumpvelocity 304
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate -1
