--- a/physicsLzd.cfg
+++ b/physicsLzd.cfg
@@ -12,6 +12,7 @@ sv_slickaccelerate 15
 sv_friction 5
 edgefriction 1
 sv_stepheight 34
+sv_steptype 0
 sv_jumpvelocity 310
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate -1
