--- a/physicsOverkill.cfg
+++ b/physicsOverkill.cfg
@@ -15,6 +15,7 @@ sv_stepheight 31
 // Nex: 32+2
 // Xon 0.7: 24+2
 // Samual: 31 (just below 32, keeping things smooth without allowing 32qu steps)
+sv_steptype 0
 
 // jump duration == 2*sv_jumpvelocity / sv_gravity
 // in this case: 0.65 (thus either 19 or 20 frames)
