--- a/physicsQ3.cfg
+++ b/physicsQ3.cfg
@@ -12,6 +12,7 @@ sv_slickaccelerate 1
 sv_friction 6
 edgefriction 1
 sv_stepheight 18
+sv_steptype 3
 sv_jumpvelocity 270
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate 4
