--- a/physicsXDF.cfg
+++ b/physicsXDF.cfg
@@ -16,6 +16,7 @@ sv_friction 5.8
 edgefriction 1
 sv_stepheight 26
 // CPMA: 18
+sv_steptype 0
 sv_jumpvelocity 270
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate 4
