--- a/physicsQBFplus.cfg
+++ b/physicsQBFplus.cfg
@@ -11,6 +11,7 @@ sv_slickaccelerate 5.5
 sv_friction 5
 edgefriction 1
 sv_stepheight 34
+sv_steptype 0
 sv_jumpvelocity 300
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate -1
