--- a/physicsWarsowDev.cfg
+++ b/physicsWarsowDev.cfg
@@ -11,6 +11,7 @@ sv_slickaccelerate 12
 sv_friction 8
 edgefriction 1
 sv_stepheight 18
+sv_steptype 0
 sv_jumpvelocity 280
 sv_jumpvelocity_crouch 0
 sv_wateraccelerate 10
