--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -87,10 +87,11 @@ set sv_player_crouch_viewoffset "0 0 20" "view offset of the player model when c
 set sv_player_crouch_mins "-16 -16 -24" "mins of a crouched playermodel"
 set sv_player_crouch_maxs "16 16 25" "maxs of a crouched playermodel"
 
-set sv_doublejump 0 "\"1\" = allow Quake 2-style double jumps, \"2\" = allow CPMA-style double jumps (step up, ramp, headbang, teleport)"
+set sv_doublejump 0 "\"1\" = allow Quake 2-style double jumps (requires sv_steptype 0), \"2\" = allow CPMA-style double jumps (step up, ramp, headbang, teleport)"
 set sv_jumpspeedcap_min "nan" "lower bound on the baseline velocity of a jump; final velocity will be >= (jumpheight * min + jumpheight); \"nan\" disables"
 set sv_jumpspeedcap_max "nan" "upper bound on the baseline velocity of a jump; final velocity will be <= (jumpheight * max + jumpheight); \"nan\" disables"
 set sv_jumpspeedcap_max_disable_on_ramps 0 "disable upper baseline velocity bound on ramps to preserve the old rampjump style"
+set sv_steptype 0 "\"0\" = traditional Xonotic/Nexuiz/Quake behaviour, \"1\" = CPMA behaviour except stepping up ramps is disabled and stepping up underwater is enabled, \"2\" = CPMA behaviour, \"3\" = VQ3 behaviour; NOTE all modes allow stepping up over tiny ramps that typically are brush misalignments (needed for some Q3 maps, Xonotic 0.8.x and earlier didn't allow it)"
 set sv_track_canjump 0 "track if the player released the jump key between 2 jumps to decide if they are able to jump or not"
 set sv_jumpvelocity_crouch 0 "jump height while crouching; \"0\" = regular jump height"
 
