Improve autopause for singleplayer/listen and enable it by default
This will pause if all clients are in menu/console/chat.  It considers
spectators because otherwise they cannot join the match if the current
player(s) are in menu/console/chat.

Disables snd_cdautopause by default which will only take effect in
current DP.

Closes #2670

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -348,6 +348,8 @@ seta cl_announcer default "name of the announcer you wish to use from data/sound
 seta cl_announcer_antispam 2 "number of seconds before an announcement of the same sound can be played again"
 seta cl_announcer_maptime 3 "play announcer sound telling you the remaining maptime - 0: do not play at all, 1: play at one minute, 2: play at five minutes, 3: play both"
 
+set snd_cdautopause 0
+
 // aliases:
 alias +fire +attack
 alias -fire -attack
