--- a/bal-wep-xdf.cfg
+++ b/bal-wep-xdf.cfg
@@ -1,9 +1,11 @@
+set g_balance_damagepush_speedfactor 0
+
 // {{{ #1: Blaster
 set g_balance_blaster_primary_animtime 0.2
 set g_balance_blaster_primary_damage 20
 set g_balance_blaster_primary_delay 0
 set g_balance_blaster_primary_edgedamage 10
-set g_balance_blaster_primary_force 375
+set g_balance_blaster_primary_force 375 //FIXME
 set g_balance_blaster_primary_force_zscale 1
 set g_balance_blaster_primary_lifetime 5
 set g_balance_blaster_primary_radius 60
@@ -105,7 +107,7 @@ set g_balance_mortar_primary_animtime 0.3
 set g_balance_mortar_primary_damage 55
 set g_balance_mortar_primary_damageforcescale 0
 set g_balance_mortar_primary_edgedamage 25
-set g_balance_mortar_primary_force 250
+set g_balance_mortar_primary_force 250 //FIXME
 set g_balance_mortar_primary_health 15
 set g_balance_mortar_primary_lifetime 5
 set g_balance_mortar_primary_lifetime_stick 0
@@ -124,7 +126,7 @@ set g_balance_mortar_secondary_animtime 0.5
 set g_balance_mortar_secondary_damage 55
 set g_balance_mortar_secondary_damageforcescale 0
 set g_balance_mortar_secondary_edgedamage 30
-set g_balance_mortar_secondary_force 300
+set g_balance_mortar_secondary_force 250
 set g_balance_mortar_secondary_health 30
 set g_balance_mortar_secondary_lifetime 8
 set g_balance_mortar_secondary_lifetime_bounce 0.5
@@ -151,7 +153,7 @@ set g_balance_minelayer_damage 40
 set g_balance_minelayer_damageforcescale 0
 set g_balance_minelayer_detonatedelay -1
 set g_balance_minelayer_edgedamage 20
-set g_balance_minelayer_force 250
+set g_balance_minelayer_force 250 //FIXME
 set g_balance_minelayer_health 15
 set g_balance_minelayer_lifetime 10
 set g_balance_minelayer_lifetime_countdown 0.5
@@ -164,7 +166,7 @@ set g_balance_minelayer_reload_ammo 0
 set g_balance_minelayer_reload_time 2
 set g_balance_minelayer_remote_damage 45
 set g_balance_minelayer_remote_edgedamage 40
-set g_balance_minelayer_remote_force 300
+set g_balance_minelayer_remote_force 300 //FIXME
 set g_balance_minelayer_remote_radius 200
 set g_balance_minelayer_speed 1000
 set g_balance_minelayer_switchdelay_drop 0
@@ -180,7 +182,7 @@ set g_balance_electro_combo_comboradius 275
 set g_balance_electro_combo_comboradius_thruwall 200
 set g_balance_electro_combo_damage 50
 set g_balance_electro_combo_edgedamage 25
-set g_balance_electro_combo_force 120
+set g_balance_electro_combo_force 120 //FIXME?
 set g_balance_electro_combo_radius 175
 set g_balance_electro_combo_safeammocheck 1
 set g_balance_electro_combo_speed 2000
@@ -189,7 +191,7 @@ set g_balance_electro_primary_animtime 0.3
 set g_balance_electro_primary_comboradius 150
 set g_balance_electro_primary_damage 40
 set g_balance_electro_primary_edgedamage 20
-set g_balance_electro_primary_force 200
+set g_balance_electro_primary_force 200 //FIXME?
 set g_balance_electro_primary_lifetime 5
 set g_balance_electro_primary_midaircombo_enemy 1
 set g_balance_electro_primary_midaircombo_explode 1
@@ -213,7 +215,7 @@ set g_balance_electro_secondary_damage 30
 set g_balance_electro_secondary_damagedbycontents 1
 set g_balance_electro_secondary_damageforcescale 4
 set g_balance_electro_secondary_edgedamage 15
-set g_balance_electro_secondary_force 200
+set g_balance_electro_secondary_force 200 //FIXME
 set g_balance_electro_secondary_health 5
 set g_balance_electro_secondary_lifetime 3
 set g_balance_electro_secondary_limit 0
@@ -268,7 +270,7 @@ set g_balance_crylink_secondary_bouncedamagefactor 0
 set g_balance_crylink_secondary_bounces 0
 set g_balance_crylink_secondary_damage 8
 set g_balance_crylink_secondary_edgedamage 4
-set g_balance_crylink_secondary_force 480
+set g_balance_crylink_secondary_force 250
 set g_balance_crylink_secondary_joindelay 0
 set g_balance_crylink_secondary_joinexplode 0
 set g_balance_crylink_secondary_joinexplode_damage 0
@@ -346,7 +348,7 @@ set g_balance_hagar_primary_ammo 1
 set g_balance_hagar_primary_damage 25
 set g_balance_hagar_primary_damageforcescale 0
 set g_balance_hagar_primary_edgedamage 12.5
-set g_balance_hagar_primary_force 92
+set g_balance_hagar_primary_force 75 // maybe 65?
 set g_balance_hagar_primary_health 15
 set g_balance_hagar_primary_lifetime 5
 set g_balance_hagar_primary_radius 25
@@ -392,7 +394,7 @@ set g_balance_devastator_damage 80
 set g_balance_devastator_damageforcescale 0
 set g_balance_devastator_detonatedelay 999
 set g_balance_devastator_edgedamage 40
-set g_balance_devastator_force 350
+set g_balance_devastator_force 250
 set g_balance_devastator_guidedelay 0.2
 set g_balance_devastator_guidegoal 512
 set g_balance_devastator_guiderate 0
@@ -446,7 +448,7 @@ set g_balance_porto_weaponthrowable 1
 set g_balance_vaporizer_primary_ammo 10
 set g_balance_vaporizer_primary_animtime 0.3
 set g_balance_vaporizer_primary_damage 150
-set g_balance_vaporizer_primary_force 800
+set g_balance_vaporizer_primary_force 800 //FIXME
 set g_balance_vaporizer_primary_refire 1
 set g_balance_vaporizer_reload_ammo 0
 set g_balance_vaporizer_reload_time 0
@@ -455,7 +457,7 @@ set g_balance_vaporizer_secondary_animtime 0.2
 set g_balance_vaporizer_secondary_damage 25
 set g_balance_vaporizer_secondary_delay 0
 set g_balance_vaporizer_secondary_edgedamage 12.5
-set g_balance_vaporizer_secondary_force 480
+set g_balance_vaporizer_secondary_force 480 //FIXME
 set g_balance_vaporizer_secondary_force_zscale 1
 set g_balance_vaporizer_secondary_lifetime 5
 set g_balance_vaporizer_secondary_radius 70
@@ -502,7 +504,7 @@ set g_balance_hlac_primary_ammo 1
 set g_balance_hlac_primary_animtime 0.4
 set g_balance_hlac_primary_damage 18
 set g_balance_hlac_primary_edgedamage 9
-set g_balance_hlac_primary_force 90
+set g_balance_hlac_primary_force 90 //FIXME?
 set g_balance_hlac_primary_lifetime 5
 set g_balance_hlac_primary_radius 70
 set g_balance_hlac_primary_refire 0.15
@@ -518,7 +520,7 @@ set g_balance_hlac_secondary_ammo 10
 set g_balance_hlac_secondary_animtime 0.3
 set g_balance_hlac_secondary_damage 15
 set g_balance_hlac_secondary_edgedamage 7.5
-set g_balance_hlac_secondary_force 90
+set g_balance_hlac_secondary_force 90 //FIXME?
 set g_balance_hlac_secondary_lifetime 5
 set g_balance_hlac_secondary_radius 70
 set g_balance_hlac_secondary_refire 1
@@ -596,7 +598,7 @@ set g_balance_fireball_primary_bfgradius 1000
 set g_balance_fireball_primary_damage 200
 set g_balance_fireball_primary_damageforcescale 0
 set g_balance_fireball_primary_edgedamage 50
-set g_balance_fireball_primary_force 600
+set g_balance_fireball_primary_force 600 //FIXME?
 set g_balance_fireball_primary_health 0
 set g_balance_fireball_primary_laserburntime 0.5
 set g_balance_fireball_primary_laserdamage 80
@@ -634,7 +636,7 @@ set g_balance_seeker_flac_ammo 1
 set g_balance_seeker_flac_animtime 0.1
 set g_balance_seeker_flac_damage 15
 set g_balance_seeker_flac_edgedamage 10
-set g_balance_seeker_flac_force 50
+set g_balance_seeker_flac_force 50 //FIXME?
 set g_balance_seeker_flac_lifetime 0.1
 set g_balance_seeker_flac_lifetime_rand 0.05
 set g_balance_seeker_flac_radius 100
@@ -652,7 +654,7 @@ set g_balance_seeker_missile_damageforcescale 4
 set g_balance_seeker_missile_decel 1400
 set g_balance_seeker_missile_delay 0.25
 set g_balance_seeker_missile_edgedamage 10
-set g_balance_seeker_missile_force 150
+set g_balance_seeker_missile_force 150 //FIXME?
 set g_balance_seeker_missile_health 5
 set g_balance_seeker_missile_lifetime 15
 set g_balance_seeker_missile_proxy 0
@@ -772,7 +774,7 @@ set g_balance_arc_bolt_count 1
 set g_balance_arc_bolt_damage 25
 set g_balance_arc_bolt_damageforcescale 0
 set g_balance_arc_bolt_edgedamage 12.5
-set g_balance_arc_bolt_force 200
+set g_balance_arc_bolt_force 200 //FIXME
 set g_balance_arc_bolt_health 15
 set g_balance_arc_bolt_lifetime 5
 set g_balance_arc_bolt_radius 65
@@ -919,7 +921,7 @@ set g_balance_okrpc_primary_damage 150
 set g_balance_okrpc_primary_damage2 500
 set g_balance_okrpc_primary_damageforcescale 2
 set g_balance_okrpc_primary_edgedamage 50
-set g_balance_okrpc_primary_force 400
+set g_balance_okrpc_primary_force 400 //FIXME
 set g_balance_okrpc_primary_health 25
 set g_balance_okrpc_primary_lifetime 30
 set g_balance_okrpc_primary_radius 300
@@ -933,7 +935,7 @@ set g_balance_okrpc_secondary_animtime 0.2
 set g_balance_okrpc_secondary_damage 25
 set g_balance_okrpc_secondary_delay 0
 set g_balance_okrpc_secondary_edgedamage 12.5
-set g_balance_okrpc_secondary_force 360
+set g_balance_okrpc_secondary_force 360 //FIXME
 set g_balance_okrpc_secondary_force_zscale 1
 set g_balance_okrpc_secondary_lifetime 5
 set g_balance_okrpc_secondary_radius 70
