mostly just copying q3 radiuses

--- a/bal-wep-xdf.cfg
+++ b/bal-wep-xdf.cfg
@@ -131,7 +131,7 @@ set g_balance_mortar_secondary_health 30
 set g_balance_mortar_secondary_lifetime 8
 set g_balance_mortar_secondary_lifetime_bounce 0.5
 set g_balance_mortar_secondary_lifetime_stick 0
-set g_balance_mortar_secondary_radius 200
+set g_balance_mortar_secondary_radius 200 //should be 150
 set g_balance_mortar_secondary_refire 0.7
 set g_balance_mortar_secondary_remote_detonateprimary 0
 set g_balance_mortar_secondary_speed 800
@@ -153,20 +153,20 @@ set g_balance_minelayer_damage 40
 set g_balance_minelayer_damageforcescale 0
 set g_balance_minelayer_detonatedelay -1
 set g_balance_minelayer_edgedamage 20
-set g_balance_minelayer_force 250 //FIXME
+set g_balance_minelayer_force 250
 set g_balance_minelayer_health 15
 set g_balance_minelayer_lifetime 10
 set g_balance_minelayer_lifetime_countdown 0.5
 set g_balance_minelayer_limit 3
 set g_balance_minelayer_protection 0
 set g_balance_minelayer_proximityradius 150
-set g_balance_minelayer_radius 175
+set g_balance_minelayer_radius 150
 set g_balance_minelayer_refire 1.5
 set g_balance_minelayer_reload_ammo 0
 set g_balance_minelayer_reload_time 2
 set g_balance_minelayer_remote_damage 45
 set g_balance_minelayer_remote_edgedamage 40
-set g_balance_minelayer_remote_force 300 //FIXME
+set g_balance_minelayer_remote_force 250
 set g_balance_minelayer_remote_radius 200
 set g_balance_minelayer_speed 1000
 set g_balance_minelayer_switchdelay_drop 0
@@ -351,7 +351,7 @@ set g_balance_hagar_primary_edgedamage 12.5
 set g_balance_hagar_primary_force 75 // maybe 65?
 set g_balance_hagar_primary_health 15
 set g_balance_hagar_primary_lifetime 5
-set g_balance_hagar_primary_radius 25
+set g_balance_hagar_primary_radius 20
 set g_balance_hagar_primary_refire 0.11
 set g_balance_hagar_primary_speed 2000
 set g_balance_hagar_primary_spread 0
@@ -402,7 +402,7 @@ set g_balance_devastator_guideratedelay 999
 set g_balance_devastator_guidestop 1
 set g_balance_devastator_health 30
 set g_balance_devastator_lifetime 20
-set g_balance_devastator_radius 110
+set g_balance_devastator_radius 120
 set g_balance_devastator_refire 0.9
 set g_balance_devastator_reload_ammo 0
 set g_balance_devastator_reload_time 2
