--- a/bal-wep-xdf.cfg
+++ b/bal-wep-xdf.cfg
@@ -1,5 +1,3 @@
-set g_balance_damagepush_speedfactor 0
-
 // {{{ #1: Blaster
 set g_balance_blaster_primary_animtime 0.2
 set g_balance_blaster_primary_damage 20
@@ -131,7 +129,7 @@ set g_balance_mortar_secondary_health 30
 set g_balance_mortar_secondary_lifetime 8
 set g_balance_mortar_secondary_lifetime_bounce 0.5
 set g_balance_mortar_secondary_lifetime_stick 0
-set g_balance_mortar_secondary_radius 200 //should be 150
+set g_balance_mortar_secondary_radius 200 //should be 150 for q3 compliance
 set g_balance_mortar_secondary_refire 0.7
 set g_balance_mortar_secondary_remote_detonateprimary 0
 set g_balance_mortar_secondary_speed 800
@@ -348,7 +346,7 @@ set g_balance_hagar_primary_ammo 1
 set g_balance_hagar_primary_damage 25
 set g_balance_hagar_primary_damageforcescale 0
 set g_balance_hagar_primary_edgedamage 12.5
-set g_balance_hagar_primary_force 75 // maybe 65?
+set g_balance_hagar_primary_force 65 // should be 40 for q3 compliance
 set g_balance_hagar_primary_health 15
 set g_balance_hagar_primary_lifetime 5
 set g_balance_hagar_primary_radius 20
