--- a/balance-legacyxdf.cfg
+++ b/balance-legacyxdf.cfg
@@ -219,6 +219,7 @@ set g_balance_falldamage_minspeed 900
 set g_balance_falldamage_factor 0.20
 set g_balance_falldamage_maxdamage 40
 set g_balance_falldamage_onlyvertical 0
+set g_balance_damagepush_speedfactor 2.5
 set g_balance_contents_damagerate 0.2 // ticrate interval for applying damage with playerdamage/projectiledamage
 set g_balance_contents_drowndelay 10 // time under water before a player begins drowning
 set g_balance_contents_playerdamage_drowning 20 // damage per second for while player is drowning
@@ -282,4 +283,4 @@ set g_balance_portal_lifetime 15 // these get recharged whenever the portal is u
 // hlac projectile settings are supposed to match the blaster, make sure they match when updating the blaster balance
 // }}}
 
-exec bal-wep-xdf.cfg
+exec bal-wep-legacyxdf.cfg
