Don't link pure entities to the area grid in DP master
This is important for performance.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -919,3 +919,6 @@ set cl_rollkillspeed 10
 // Interpreted in post-config.cfg.
 seta menu_forced_saved_cvars "" "These cvars will always be saved, despite engine/Xonotic cvar saving status"
 set menu_reverted_nonsaved_cvars "" "These cvars are currently marked as saved in the flags, but have been reverted and won't stay saved. INTERNAL USE ONLY."
+
+// Avoid perf problems near '0 0 0'; `set` without a description is because only current DP has this engine cvar
+set cl_areagrid_link_SOLID_NOT 0
