--- a/mutators.cfg
+++ b/mutators.cfg
@@ -63,6 +63,8 @@ set g_overkill_filter_healthmega 0
 set g_overkill_filter_armormedium 1
 set g_overkill_filter_armorbig 1
 set g_overkill_filter_armormega 0
+set g_overkill_blaster_keepdamage 0 "allow secondary fire to hurt players"
+set g_overkill_blaster_keepforce 0 "allow secondary fire to push players"
 
 
 // =========
