Return all currently removed models and buffs. Maintain g_strength.md3, g_invincible.md3 and the removed buffs for backward compatibility

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -335,6 +335,10 @@ set g_buffs_medic_regen 1.7 "health medic rate multiplier"
 set g_buffs_vengeance 1 "vengeance buff: attackers also take damage"
 set g_buffs_vengeance_time 60 "vengeance buff carry time"
 set g_buffs_vengeance_damage_multiplier 0.4 "amount of damage dealt the attacker takes when hitting a target with vengeance"
+set g_buffs_bash 1 "bash buff: increased knockback force and immunity to knockback"
+set g_buffs_bash_time 60 "bash buff carry time"
+set g_buffs_bash_force 2 "bash force multiplier"
+set g_buffs_bash_force_self 1.2 "bash self force multiplier"
 set g_buffs_disability 0 "disability buff: attacks to players and monsters deal slowness (decreased movement/attack speed) for a few seconds"
 set g_buffs_disability_time 60 "disability buff carry time"
 set g_buffs_disability_slowtime 3 "time in seconds for target disability"
