Replace 'sv' into 'surv' to avoid possible future confusions

--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -31,7 +31,7 @@ alias sv_hook_gamestart_inv
 alias sv_hook_gamestart_duel
 alias sv_hook_gamestart_mayhem
 alias sv_hook_gamestart_tmayhem
-alias sv_hook_gamestart_sv
+alias sv_hook_gamestart_surv
 // there is currently no hook for when the match is restarted
 // see sv_hook_readyrestart for previous uses of this hook
 //alias sv_hook_gamerestart
@@ -63,7 +63,7 @@ alias sv_vote_gametype_hook_tdm
 alias sv_vote_gametype_hook_duel
 alias sv_vote_gametype_hook_mayhem
 alias sv_vote_gametype_hook_tmayhem
-alias sv_vote_gametype_hook_sv
+alias sv_vote_gametype_hook_surv
 
 // Example preset to allow 1v1ctf to be used for the gametype voting screen.
 // Aliases can have max 31 chars so the gametype can have max 9 chars.
@@ -228,13 +228,13 @@ set g_tmayhem_respawn_delay_large_count 0
 set g_tmayhem_respawn_delay_max 0
 set g_tmayhem_respawn_waves 0
 set g_tmayhem_weapon_stay 0
-set g_sv_respawn_delay_small 0
-set g_sv_respawn_delay_small_count 0
-set g_sv_respawn_delay_large 0
-set g_sv_respawn_delay_large_count 0
-set g_sv_respawn_delay_max 0
-set g_sv_respawn_waves 0
-set g_sv_weapon_stay 0
+set g_surv_respawn_delay_small 0
+set g_surv_respawn_delay_small_count 0
+set g_surv_respawn_delay_large 0
+set g_surv_respawn_delay_large_count 0
+set g_surv_respawn_delay_max 0
+set g_surv_respawn_waves 0
+set g_surv_weapon_stay 0
 
 
 // =========
