Hud editor: allow displaying more than one vertical line at the desired position

--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -4,6 +4,7 @@ seta hud_configure_teamcolorforced 0 "1 = force display of team colors in config
 seta hud_configure_checkcollisions 0 "check for collisions against other panels when in hud configure mode"
 seta hud_configure_bg_minalpha 0.25 "minimum panel background alpha when in hud configure mode"
 seta hud_configure_grid_alpha 0.15 "alpha for visible grid when in configure mode"
+seta hud_configure_vertical_lines 0.5 "list of space-separated intervals at which to draw a vertical line, useful for aligning panels; e.g. 0.5 draws a vertical line in the center, \"0.25 0.5 0.75\" draws a vertical line every quarter of the screen width"
 
 seta hud_cursormode 1 "handle mouse input in cursor mode when CSQC displays a cursor"
 
