--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -87,7 +87,7 @@ set sv_player_crouch_viewoffset "0 0 20" "view offset of the player model when c
 set sv_player_crouch_mins "-16 -16 -24" "mins of a crouched playermodel"
 set sv_player_crouch_maxs "16 16 25" "maxs of a crouched playermodel"
 
-set sv_doublejump 0 "allow Quake 2-style double jumps"
+set sv_doublejump 0 "\"1\" = allow Quake 2-style double jumps, \"2\" = allow CPMA-style double jumps (step up, ramp, headbang, teleport)"
 set sv_jumpspeedcap_min "nan" "lower bound on the baseline velocity of a jump; final velocity will be >= (jumpheight * min + jumpheight); \"nan\" disables"
 set sv_jumpspeedcap_max "nan" "upper bound on the baseline velocity of a jump; final velocity will be <= (jumpheight * max + jumpheight); \"nan\" disables"
 set sv_jumpspeedcap_max_disable_on_ramps 0 "disable upper baseline velocity bound on ramps to preserve the old rampjump style"
