pm: implement predicted Q3 skimming
Behaviour should match Q3, CPMA and DeFRaG.

Renames sv_wallclip to sv_skimming.
This feature is primarily implemented for Q3DF compatibility and the
Q3DF wiki refers to it as skimming at https://www.q3df.org/wiki?p=3#Skimming
"Clip" suggests the player is moving through the obstacle which isn't
the case, and it's not specific to walls.

Also adds the "knockback" (skimming + slick) behaviour of Q3
teleporters, though it won't be much use until teleporters have
prediction.

--- a/physics.cfg
+++ b/physics.cfg
@@ -50,6 +50,7 @@ set g_physics_xonotic_jumpspeedcap_max "nan"
 set g_physics_xonotic_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_xonotic_track_canjump 0
 set g_physics_xonotic_stepdown 2
+set g_physics_xonotic_skimming 0
 
 // ========
 //  Nexuiz
@@ -91,6 +92,7 @@ set g_physics_nexuiz_jumpspeedcap_max "nan"
 set g_physics_nexuiz_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_nexuiz_track_canjump 0
 set g_physics_nexuiz_stepdown 0
+set g_physics_nexuiz_skimming 0
 
 // =======
 //  Quake
@@ -132,6 +134,7 @@ set g_physics_quake_jumpspeedcap_max "nan"
 set g_physics_quake_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_quake_track_canjump 1
 set g_physics_quake_stepdown 0
+set g_physics_quake_skimming 0
 
 // ========
 //  Warsow
@@ -173,6 +176,7 @@ set g_physics_warsow_jumpspeedcap_max "nan"
 set g_physics_warsow_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_warsow_track_canjump 0
 set g_physics_warsow_stepdown 0
+set g_physics_warsow_skimming 0
 
 // ========
 //  XDF
@@ -214,6 +218,7 @@ set g_physics_xdf_jumpspeedcap_max 0.5
 set g_physics_xdf_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_xdf_track_canjump 0
 set g_physics_xdf_stepdown 2
+set g_physics_xdf_skimming 0
 
 // =========
 //  Quake 3
@@ -255,6 +260,7 @@ set g_physics_quake3_jumpspeedcap_max 0
 set g_physics_quake3_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_quake3_track_canjump 1
 set g_physics_quake3_stepdown 0
+set g_physics_quake3_skimming 2
 
 // =========
 //  CPMA
@@ -296,6 +302,7 @@ set g_physics_cpma_jumpspeedcap_max "nan"
 set g_physics_cpma_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_cpma_track_canjump 1
 set g_physics_cpma_stepdown 0
+set g_physics_cpma_skimming 2
 
 // ========
 //  Vecxis
@@ -337,6 +344,7 @@ set g_physics_vecxis_jumpspeedcap_max "nan"
 set g_physics_vecxis_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_vecxis_track_canjump 0
 set g_physics_vecxis_stepdown 0
+set g_physics_vecxis_skimming 0
 
 // =========
 //  Quake 2
@@ -378,6 +386,7 @@ set g_physics_quake2_jumpspeedcap_max "nan"
 set g_physics_quake2_jumpspeedcap_max_disable_on_ramps 0
 set g_physics_quake2_track_canjump 1
 set g_physics_quake2_stepdown 0
+set g_physics_quake2_skimming 0
 
 // =======
 //  Bones (Like CPMA, but balanced for auto bhop and combat gametypes)
@@ -419,6 +428,7 @@ set g_physics_bones_jumpspeedcap_max "nan"
 set g_physics_bones_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_bones_track_canjump 0
 set g_physics_bones_stepdown 2
+set g_physics_bones_skimming 1
 
 // ==========
 //  Overkill
@@ -460,3 +470,4 @@ set g_physics_overkill_jumpspeedcap_max "nan"
 set g_physics_overkill_jumpspeedcap_max_disable_on_ramps 1
 set g_physics_overkill_track_canjump 0
 set g_physics_overkill_stepdown 2
+set g_physics_overkill_skimming 0
