--- a/physicsOverkill.cfg
+++ b/physicsOverkill.cfg
@@ -59,3 +59,4 @@ sv_track_canjump 0
 sv_gameplayfix_stepdown 2
 sv_gameplayfix_stepdown_maxspeed 400
 g_movement_highspeed_q3_compat 0
+sv_skimming 0
