--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -94,6 +94,7 @@ set sv_jumpspeedcap_max_disable_on_ramps 0 "disable upper baseline velocity boun
 set sv_steptype 0 "\"0\" = traditional Xonotic/Nexuiz/Quake behaviour, \"1\" = CPMA behaviour except stepping up ramps is disabled and stepping up underwater is enabled, \"2\" = CPMA behaviour, \"3\" = VQ3 behaviour; NOTE all modes allow stepping up over tiny ramps that typically are brush misalignments (needed for some Q3 maps, Xonotic 0.8.x and earlier didn't allow it)"
 set sv_track_canjump 0 "track if the player released the jump key between 2 jumps to decide if they are able to jump or not"
 set sv_jumpvelocity_crouch 0 "jump height while crouching; \"0\" = regular jump height"
+set sv_skimming 0 "Q3 skimming allows players to keep their velocity when hitting non-ground obstacles if they slide past within 250ms of having landed on a walkable surface, \"2\" also enables the 160ms \"knockback\" (skimming + slick) after teleporting"
 
 set sv_precacheplayermodels 1 "preload all the player models at game start, to avoid delays during gameplay"
 set sv_spectator_speed_multiplier 1.5 "base movement speed factor of spectators, all movement settings scale off this"
