--- a/physicsXDF.cfg
+++ b/physicsXDF.cfg
@@ -52,3 +52,4 @@ sv_gameplayfix_stepdown 2
 sv_gameplayfix_stepdown_maxspeed 400
 // needed for correct q3 haste simulation
 g_movement_highspeed_q3_compat 1
+sv_skimming 0
