--- a/monsters.cfg
+++ b/monsters.cfg
@@ -99,6 +99,7 @@ set g_monsters_think_delay 0.03333
 set g_monsters_skill 1 "Monster skill (affecting some of their attributes). 1 - easy, 2 - medium, 3 - hard, 4 - insane, 5 - nightmare"
 set g_monsters_miniboss_chance 5
 set g_monsters_miniboss_healthboost 100
+set g_monsters_drop 1
 set g_monsters_drop_time 10
 set g_monsters_ignoretraces 1
 set g_monsters_lineofsight 1
