maybe usable mortar

--- a/bal-wep-xdf.cfg
+++ b/bal-wep-xdf.cfg
@@ -101,11 +101,11 @@ set g_balance_machinegun_weaponthrowable 1
 set g_balance_mortar_bouncefactor 0.5
 set g_balance_mortar_bouncestop 0.075
 set g_balance_mortar_primary_ammo 2
-set g_balance_mortar_primary_animtime 0.3
+set g_balance_mortar_primary_animtime 0.5
 set g_balance_mortar_primary_damage 55
 set g_balance_mortar_primary_damageforcescale 0
 set g_balance_mortar_primary_edgedamage 25
-set g_balance_mortar_primary_force 250 //FIXME
+set g_balance_mortar_primary_force 200
 set g_balance_mortar_primary_health 15
 set g_balance_mortar_primary_lifetime 5
 set g_balance_mortar_primary_lifetime_stick 0
@@ -127,10 +127,10 @@ set g_balance_mortar_secondary_edgedamage 30
 set g_balance_mortar_secondary_force 250
 set g_balance_mortar_secondary_health 30
 set g_balance_mortar_secondary_lifetime 8
-set g_balance_mortar_secondary_lifetime_bounce 0.5
+set g_balance_mortar_secondary_lifetime_bounce 0.4
 set g_balance_mortar_secondary_lifetime_stick 0
 set g_balance_mortar_secondary_radius 200 //should be 150 for q3 compliance
-set g_balance_mortar_secondary_refire 0.8
+set g_balance_mortar_secondary_refire 0.5 //should be 0.8 for q3 compliance
 set g_balance_mortar_secondary_remote_detonateprimary 0
 set g_balance_mortar_secondary_speed 800
 set g_balance_mortar_secondary_speed_up 0
