opt-in cvar g_balance_damagepush_speedfactor_onlyself

--- a/balance-nexuiz25.cfg
+++ b/balance-nexuiz25.cfg
@@ -220,6 +220,7 @@ set g_balance_falldamage_factor 0.15
 set g_balance_falldamage_maxdamage 25
 set g_balance_falldamage_onlyvertical 0
 set g_balance_damagepush_speedfactor 0
+set g_balance_damagepush_speedfactor_onlyself 0
 set g_balance_contents_damagerate 0.2 // ticrate interval for applying damage with playerdamage/projectiledamage
 set g_balance_contents_drowndelay 10 // time under water before a player begins drowning
 set g_balance_contents_playerdamage_drowning 20 // damage per second for while player is drowning
