cvar spread_fixed for shotgun

--- a/bal-wep-nexuiz25.cfg
+++ b/bal-wep-nexuiz25.cfg
@@ -40,6 +40,7 @@ set g_balance_shotgun_primary_force 60
 set g_balance_shotgun_primary_refire 0.5
 set g_balance_shotgun_primary_solidpenetration 3.8
 set g_balance_shotgun_primary_spread 0.07
+set g_balance_shotgun_primary_spread_fixed 0
 set g_balance_shotgun_reload_ammo 0
 set g_balance_shotgun_reload_time 2
 set g_balance_shotgun_secondary 2
