--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,9 +76,8 @@ test_sv_game:
     - wget -nv -O data/maps/stormkeep.waypoints.cache https://gitlab.com/xonotic/xonotic-maps.pk3dir/raw/master/maps/stormkeep.waypoints.cache
 
     - EXPECT=f2226bf353b6ff3dd3c489a742ce4e6a
-    - HASH=$(${ENGINE} +timestamps 1 +exec serverbench.cfg
+    - HASH=$(${ENGINE} +exec serverbench.cfg
       | tee /dev/stderr
-      | sed -e 's,^\[[^]]*\] ,,'
       | grep '^:'
       | grep -v '^:gamestart:'
       | grep -v '^:anticheat:'
