New banning systems (ignore, muteban, voteban and playban) and new features for moderation purposes

--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -377,7 +377,11 @@ set g_chat_flood_burst_team 2 "team chat: allow bursts of so many chat lines"
 set g_chat_flood_spl_tell 1 "private chat: seconds between lines to not count as flooding"
 set g_chat_flood_lmax_tell 2 "private chat: maximum number of lines per chat message at once"
 set g_chat_flood_burst_tell 2 "private chat: allow bursts of so many chat lines"
-set g_chat_flood_notify_flooder 1 "when 0, the flooder still can see their own message"
+set g_chat_flood_notify_flooder 1 "when disabled, the flooder still can see their own message"
+set g_chat_allowed 1 "allow players to communicate via in-game chat"
+set g_chat_private_allowed 1 "allow players to communicate via in-game private chat"
+set g_chat_spectator_allowed 1 "allow spectators to communicate via in-game chat"
+set g_chat_team_allowed 1 "allow players to communicate via in-game team chat"
 set g_chat_teamcolors 0 "colorize nicknames in team color for chat"
 set g_chat_tellprivacy 1 "when disabled, tell messages are also sent to the server console log... otherwise they're kept private between players."
 set g_nick_flood_timeout 120 "time after which nick flood protection resets (set to 0 to disable nick flood checking)"
