--- a/commands.cfg
+++ b/commands.cfg
@@ -276,10 +276,28 @@ alias banlist              "qc_cmd_sv     banlist              ${* ?}" // List a
 alias kickban              "qc_cmd_sv     kickban              ${* ?}" // Disconnect a client and ban it at the same time
 alias mute                 "qc_cmd_sv     mute                 ${* ?}" // Disallow a client from talking by muting them
 alias unban                "qc_cmd_sv     unban                ${* ?}" // Remove an existing ban
-alias unmute               "qc_cmd_sv     unmute               ${* ?}" // Unmute a client
+alias unmute               "qc_cmd_sv     unmute               ${* ?}" // Unmute a client (Remove an existing muting ban)
 
 // other aliases for ban commands
 alias bans "banlist"
+
+
+// Client
+alias ignore                  "qc_cmd_cmd    ignore               ${* ?}" // Keep client out of your personal chat log for a match
+alias unignore                "qc_cmd_cmd    unignore             ${* ?}" // Remove an existing ignored client
+alias clear_ignores           "qc_cmd_cmd    clear_ignores"               // Remove all existing ignored clients
+
+// Server
+alias playban                 "qc_cmd_sv     playban              ${* ?}" // Ban disallowing a client from playing (forced to spectate)
+alias unplayban               "qc_cmd_sv     unplayban            ${* ?}" // Remove an existing play ban client
+alias voteban                 "qc_cmd_sv     voteban              ${* ?}" // Ban disallowing a client from voting
+alias unvoteban               "qc_cmd_sv     unvoteban            ${* ?}" // Remove an existing vote ban client
+
+// other aliases for muteban, playban and voteban lists
+alias mutebans  "g_muteban_list ${* ?}"
+alias playbans  "g_playban_list ${* ?}"
+alias votebans  "g_voteban_list ${* ?}"
+
 
 // character classes (intersected with 32..126 minus ", $, ;, ^, \ - if you
 // want these, include them explicitly)
