--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -395,11 +395,15 @@ set sv_waypointsprite_limitedrange 5120 "default maximum viewing distance of way
 
 set sv_itemstime 1 "enable networking of time left until respawn for items such as mega health/armor and powerups"
 
+// bans
 set g_ban_default_bantime 5400 "90 minutes"
 set g_ban_default_masksize 3 "masksize 0 means banning by UID only, 1 means banning by /8 (IPv6: /32) network, 2 means banning by /16 (IPv6: /48) network, 3 means banning by /24 (IPv6: /56) network, 4 means banning by single IP (IPv6: /64 network)"
 set g_ban_telluser 1 "notify the banned player about it when they try to join"
 set g_banned_list "" "format: IP remainingtime IP remainingtime ..."
 set g_banned_list_idmode "1" "when set, the IP banning system always uses the ID over the IP address (so a user in a banned IP range can connect if they have a valid signed ID)"
+set g_muteban_list "" "list of banned players from chat, format: IP playerkey ..."
+set g_playban_list "" "list of banned players from playing (forced to spectate), format: IP playerkey ..."
+set g_voteban_list "" "list of banned players from voting, format: IP playerkey ..."
 
 // useful vote aliases
 set timelimit_increment 5 "number of minutes added to the timer when voting for extendmatchtime"
