Increase Xonotic version to 0.8.6
See also: https://gitlab.com/xonotic/xonotic-data.pk3dir/-/merge_requests/1034

--- a/xonotic-common.cfg
+++ b/xonotic-common.cfg
@@ -8,7 +8,7 @@
 // Xonotic version (formatted for machines)
 // used to determine if a client version is compatible
 // general policy: previous release has "best effort" support, older releases are unsupported,
-// but gameversion_min doesn't have to be bumped with every release
+// but gameversion_min doesn't have to be bumped with every release (eg: a minor patch release)
 // bump when clients become incompatible or any other perfectly good reason
 // (e.g. game data incompatibility, engine version incompatibility, etc
 // note: this automatically filters the server browser, clients of the new
@@ -18,8 +18,8 @@
 // e.g. Xonotic 1.5.1 RC1 will be 15101
 set g_xonoticversion git "Xonotic version (formatted for humans)"
 
-gameversion 805       // 0.8.5
-gameversion_min 802   // 0.8.2 is the previous release
+gameversion 806       // 0.8.6
+gameversion_min 805   // 0.8.5 is the previous release
 gameversion_max 65535 // future versions should nag players to update
 
 // compatibility guideline:
