--- a/commands.cfg
+++ b/commands.cfg
@@ -275,13 +275,14 @@ alias ban                  "qc_cmd_sv     ban                  ${* ?}" // Ban an
 alias banlist              "qc_cmd_sv     banlist              ${* ?}" // List all existing bans
 alias kickban              "qc_cmd_sv     kickban              ${* ?}" // Disconnect a client and ban it at the same time
 alias mute                 "qc_cmd_sv     mute                 ${* ?}" // Disallow a client from talking by muting them
-alias muteban              "qc_cmd_sv     mute                 ${* ?}" // Alternative version of "mute", disallow a client from talking by muting them
 alias unban                "qc_cmd_sv     unban                ${* ?}" // Remove an existing ban
 alias unmute               "qc_cmd_sv     unmute               ${* ?}" // Unmute a client (Remove an existing muting ban)
-alias unmuteban            "qc_cmd_sv     unmute               ${* ?}" // Alternative version of "unmute", unmute a client (Remove an existing muting ban)
 
-// other aliases for ban commands
-alias bans "banlist"
+// alternative aliases for ban commands
+alias bans      "qc_cmd_sv banlist ${* ?}"
+alias muteban   "qc_cmd_sv mute    ${* ?}"
+alias unmuteban "qc_cmd_sv unmute  ${* ?}"
+
 
 
 // Client
